fix colon alignment and remove redundant parameter

--- a/html-javascript/mini-project/clock/styles.css
+++ b/html-javascript/mini-project/clock/styles.css
@@ -5,14 +5,14 @@
 	font-family: "Roboto Mono", monospace;
 }
 
-body{
+body {
 	height: 100vh;
 	display: flex;
 	justify-content: center;
 	align-items: center;
 }
 
-h1{
+h1 {
 	position: absolute;
 	top: 0%;
 	margin: 10px;
@@ -95,4 +95,12 @@ h1{
 .flap-back {
 	backface-visibility: hidden;
 	transform: rotateX(-0.5turn);
+}
+
+/*Centering the colon in the clock*/
+.colon-f,
+.colon-b,
+.colon-bg {
+	padding-bottom: 20px;
+	padding-right: 5px;
 }
